force-app/main/default/objects/Retail_Order_Return_Form__c/Retail_Order_Return_Form__c.object-meta.xml
<CustomObject>
    <label>Retail Order Return Form</label>
    <nameField>
        <displayFormat>OR-{0000}</displayFormat>
        <label>Return ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Order Return Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>