force-app/main/default/objects/Retail_Order_Return_Form__c/fields/Add_Comment__c.field-meta.xml
<CustomField>
    <fullName>Add_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Comment</label>
    <type>Checkbox</type>
</CustomField>