force-app/main/default/objects/Retail_Order_Return_Form__c/fields/Closest_Transport_Branch__c.field-meta.xml
<CustomField>
    <fullName>Closest_Transport_Branch__c</fullName>
    <label>Closest Transport Branch</label>
    <type>TextArea</type>
</CustomField>