force-app/main/default/objects/Retail_Order_Return_Form__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <label>Credit Note</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>