force-app/main/default/objects/Retail_Order_Return_Form__c/fields/Expected_Delivery_Date_Customer__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Date_Customer__c</fullName>
    <label>Expected Delivery Date - Customer</label>
    <type>Date</type>
</CustomField>