force-app/main/default/objects/Retail_Order_Return_Form__c/fields/Final_Amount_Owed__c.field-meta.xml
<CustomField>
    <fullName>Final_Amount_Owed__c</fullName>
    <label>Final Amount Owed</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>