force-app/main/default/objects/Retail_Order_Return_Form__c/fields/Freight_Charge_Bearer__c.field-meta.xml
<CustomField>
    <fullName>Freight_Charge_Bearer__c</fullName>
    <label>Freight Charge Bearer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avana</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>