force-app/main/default/objects/Retail_Order_Return_Form__c/fields/Mode_of_Refund__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Refund__c</fullName>
    <label>Mode of Refund</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>