force-app/main/default/objects/Retail_Order_Return_Form__c/fields/Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_Total__c</fullName>
    <label>Net Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>