force-app/main/default/objects/Retail_Order_Return_Form__c/fields/Reason_for_Return__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Return__c</fullName>
    <label>Reason for Return</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturing Defect</fullName>
            </value>
            <value>
                <fullName>Late Delivery</fullName>
            </value>
            <value>
                <fullName>Unable to pay</fullName>
            </value>
            <value>
                <fullName>Product not selling</fullName>
            </value>
            <value>
                <fullName>Incorrect Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>