force-app/main/default/objects/Retail_Order_Return_Form__c/fields/Replacement_Order__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replacement Order</label>
    <referenceTo>Retail_Order__c</referenceTo>
    <relationshipLabel>Retail Order Return Forms (Replacement Order)</relationshipLabel>
    <relationshipName>Retail_Order_Return_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>