force-app/main/default/objects/Retail_Order_Return_Form__c/fields/Retail_Employee__c.field-meta.xml
<CustomField>
    <fullName>Retail_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail Employee</label>
    <referenceTo>Retail_Employee__c</referenceTo>
    <relationshipLabel>Retail Order Return Forms</relationshipLabel>
    <relationshipName>Retail_Order_Return_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>