force-app/main/default/objects/Retail_Order_Return_Form__c/fields/Retail_Order__c.field-meta.xml
<CustomField>
    <fullName>Retail_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order ID</label>
    <referenceTo>Retail_Order__c</referenceTo>
    <relationshipLabel>Retail Order Return Forms</relationshipLabel>
    <relationshipName>Retail_Order_Return_Forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>