force-app/main/default/objects/Retail_Order_Return_Form__c/fields/Retail_Upload_Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Retail_Upload_Credit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Upload Credit Note - ID</label>
    <referenceTo>Retail_Upload_Credit_Note__c</referenceTo>
    <relationshipLabel>Retail Order Return Forms</relationshipLabel>
    <relationshipName>Retail_Order_Return_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>