force-app/main/default/objects/Retail_Order_Return_Form__c/fields/Retail_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Retail_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispatch Warehouse</label>
    <referenceTo>Retail_Warehouse__c</referenceTo>
    <relationshipLabel>Retail Order Return Forms</relationshipLabel>
    <relationshipName>Retail_Order_Return_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>