force-app/main/default/objects/Retail_Order_Return_Form__c/fields/Return_Freight_Charge_Bearer__c.field-meta.xml
<CustomField>
    <fullName>Return_Freight_Charge_Bearer__c</fullName>
    <label>Return Freight Charge Bearer</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avana</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>