force-app/main/default/objects/Retail_Order_Return_Form__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Exec Return Approval</fullName>
            </value>
            <value>
                <fullName>Commercial: Upload Return Invoice</fullName>
            </value>
            <value>
                <fullName>Sales: Upload Transit Info</fullName>
            </value>
            <value>
                <fullName>Production: Confirm Stock Receipt</fullName>
            </value>
            <value>
                <fullName>Commercial: Upload Credit Note</fullName>
            </value>
            <value>
                <fullName>Return Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>