force-app/main/default/objects/Retail_Order_Return_Form__c/fields/Transport_Company__c.field-meta.xml
<CustomField>
    <fullName>Transport_Company__c</fullName>
    <label>Transport Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>